src/themes/quiet.css
/* ... */
/*//////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
//
//  Light mode colors
//
//////////////////////////////////////////////////////////////////////////////////////////////////////////////////////*/

:root,
:host,
.quiet-light {
  color-scheme: light;

  --quiet-silent: white;
  --quiet-strident: black;
  --quiet-background-color: white;
  --quiet-paper-color: white;
  --quiet-text-body: var(--quiet-neutral-900);
  --quiet-text-muted: var(--quiet-neutral-text-colorful);
  --quiet-focus-color: var(--quiet-primary-fill-mid);
  --quiet-focus-ring: var(--quiet-border-style) var(--quiet-focus-width) var(--quiet-focus-color);
  --quiet-backdrop-color: rgb(0 0 0 / 0.25);
  --quiet-selection-background-color: var(--quiet-primary-300);
  --quiet-shadow-color: black;
  --quiet-shadow-softer: 0 1px 2px color-mix(in oklab, transparent, var(--quiet-shadow-color) 4%);
  --quiet-shadow-mid: 0 4px 8px color-mix(in oklab, transparent, var(--quiet-shadow-color) 6%);
  --quiet-shadow-loud: 0 8px 16px color-mix(in oklab, transparent, var(--quiet-shadow-color) 8%);

  /* Primary */
  --quiet-primary-fill-softer: var(--quiet-primary-100);
  --quiet-primary-fill-soft: var(--quiet-primary-200);
  --quiet-primary-fill-mid: var(--quiet-primary-600);
  --quiet-primary-fill-loud: var(--quiet-primary-800);
  --quiet-primary-fill-louder: var(--quiet-primary-900);
  --quiet-primary-text-on-soft: var(--quiet-primary-900);
  --quiet-primary-text-on-mid: white;
  --quiet-primary-text-on-loud: white;
  --quiet-primary-text-colorful: color-mix(in oklab, var(--quiet-primary-600), black 12.5%);
  --quiet-primary-stroke-softer: color-mix(in oklab, var(--quiet-primary-100), black 3%);
  --quiet-primary-stroke-soft: var(--quiet-primary-300);
  --quiet-primary-stroke-mid: var(--quiet-primary-500);

  /* Secondary */
  --quiet-neutral-fill-softer: var(--quiet-neutral-100);
  --quiet-neutral-fill-soft: var(--quiet-neutral-200);
  --quiet-neutral-fill-mid: var(--quiet-neutral-600);
  --quiet-neutral-fill-loud: var(--quiet-neutral-800);
  --quiet-neutral-fill-louder: var(--quiet-neutral-900);
  --quiet-neutral-text-on-soft: var(--quiet-neutral-900);
  --quiet-neutral-text-on-mid: white;
  --quiet-neutral-text-on-loud: white;
  --quiet-neutral-text-colorful: color-mix(in oklab, var(--quiet-neutral-600), black 12.5%);
  --quiet-neutral-stroke-softer: color-mix(in oklab, var(--quiet-neutral-100), black 3%);
  --quiet-neutral-stroke-soft: var(--quiet-neutral-300);
  --quiet-neutral-stroke-mid: var(--quiet-neutral-500);

  /* Constructive */
  --quiet-constructive-fill-softer: var(--quiet-constructive-100);
  --quiet-constructive-fill-soft: var(--quiet-constructive-200);
  --quiet-constructive-fill-mid: var(--quiet-constructive-600);
  --quiet-constructive-fill-loud: var(--quiet-constructive-800);
  --quiet-constructive-fill-louder: var(--quiet-constructive-900);
  --quiet-constructive-text-on-soft: var(--quiet-constructive-900);
  --quiet-constructive-text-on-mid: white;
  --quiet-constructive-text-on-loud: white;
  --quiet-constructive-text-colorful: color-mix(in oklab, var(--quiet-constructive-600), black 12.5%);
  --quiet-constructive-stroke-softer: color-mix(in oklab, var(--quiet-constructive-100), black 3%);
  --quiet-constructive-stroke-soft: var(--quiet-constructive-300);
  --quiet-constructive-stroke-mid: var(--quiet-constructive-500);

  /* Destructive */
  --quiet-destructive-fill-softer: var(--quiet-destructive-100);
  --quiet-destructive-fill-soft: var(--quiet-destructive-200);
  --quiet-destructive-fill-mid: var(--quiet-destructive-600);
  --quiet-destructive-fill-loud: var(--quiet-destructive-800);
  --quiet-destructive-fill-louder: var(--quiet-destructive-900);
  --quiet-destructive-text-on-soft: var(--quiet-destructive-900);
  --quiet-destructive-text-on-mid: white;
  --quiet-destructive-text-on-loud: white;
  --quiet-destructive-text-colorful: color-mix(in oklab, var(--quiet-destructive-600), black 12.5%);
  --quiet-destructive-stroke-softer: color-mix(in oklab, var(--quiet-destructive-100), black 3%);
  --quiet-destructive-stroke-soft: var(--quiet-destructive-300);
  --quiet-destructive-stroke-mid: var(--quiet-destructive-500);
}
/* ... */

